refactorchanged file structure

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 ﻿{
-  "token" : "MTE2OTI4NzQ0NzAxMjcxMjUzOQ.GvkLlg.TBzySrGGNeEwhqHkDSZ9i-yFgiKNwi8nRANnNw",
+  "token" : "replacewithtoken",
   "prefix" : "!"
 }
